syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hexalite.network.protobuf.protocol";
option java_outer_classname = "GreeterProto";

package protocol;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
